Quorum3/Library/Tests/TypeChecker/Pass/ReturningIntegerInPlaceOfNumber.quorum
class Main
    action Main
        number n = doSomething()
        output n
    end
    action doSomething() returns number
        return 4
    end
end