Quorum3/Library/Tests/TypeChecker/Fail/ImpAssignNumberTextWrapped.quorum
action Main
    class main
        number n = "yep"
    end
end